bump dependencies
including adjustements required by code analysis plugins